// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select-feild/SelectField should render properly for multi select field 1`] = `
<MultiSelectField
  error={null}
  meta={
    {
      "initialTouched": false,
      "touched": false,
      "value": "value",
    }
  }
  name="toggle"
  onBlur={[MockFunction]}
  onChange={[Function]}
  options={[]}
  selectedValues="value"
  value="value"
/>
`;

exports[`components/select-feild/SelectField should render properly for single select field 1`] = `
<SingleSelectField
  error={null}
  meta={
    {
      "initialTouched": false,
      "touched": false,
      "value": "value",
    }
  }
  name="toggle"
  onBlur={[MockFunction]}
  onChange={[Function]}
  options={[]}
  selectedValue="value"
  value="value"
/>
`;
